# AndroidSystem

./: .gitignore  README.md  settings.gradle
UI/: LayoutInfllater.md  build.gradle
UI/src/androidTest/java/com/leo/ui/: ExampleInstrumentedTest.java
UI/src/main/: AndroidManifest.xml
UI/src/main/java/com/leo/ui/: ConstraintLayoutActivity.java  LayoutInflateActivity.java  RecyclerActivity.java
UI/src/main/res/layout/: activity_constraint_layout.xml  activity_layout_inflate.xml  activity_recycler.xml  item_text.xml  layout_inflate.xml
UI/src/main/res/values/: styles.xml
UI/src/test/java/com/leo/ui/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/leo/system/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/leo/system/: App.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/leo/system/: ExampleUnitTest.java
device/: build.gradle
device/src/main/: AndroidManifest.xml
device/src/main/cpp/: CMakeLists.txt  device.cpp  device.h
device/src/main/java/com/leo/device/: AppCrashHandlerTest.java  DeviceUtil.java  ReportUtil.java
device/src/main/java/com/leo/device/emulator/: CheckResult.java  CommandUtil.java  EmulatorCheckCallback.java  EmulatorCheckUtil.java
device/src/main/java/com/leo/device/report/: BaseMsg.java  CrashMsg.java  HookMsg.java  IReport.java
device/src/main/java/com/leo/device/root/: Const.java  RootChecker.java  RootNative.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
